--- a/styles/style.css
+++ b/styles/style.css
@@ -3,13 +3,13 @@
   margin:0;
   box-sizing: border-box;
 }
-*:not(i){
+*:not(i) {
   font-family: "Poppins" , sans-serif;
 }
 body{
   background-color: cornflowerblue;
 }
-.container{
+.container {
   background-color: white;
   width: 90vmin;
   position: absolute;
@@ -20,8 +20,16 @@ body{
   border-radius: 10px;
   box-shadow:0 20px 40px rgba(38,33,61,0.2);
 }
-.search-box{
+.search-box {
   width: 100%;
   display: flex;
   justify-content: space-between;
+}
+.search-box input {
+  padding: 5px;
+  width: 70%;
+  border: none;
+  outline: none;
+  border-bottom: 3px solid cornflowerblue;
+  font-size: 16px;
 }
