--- a/styles/style.css
+++ b/styles/style.css
@@ -33,3 +33,12 @@ body{
   border-bottom: 3px solid cornflowerblue;
   font-size: 16px;
 }
+.search-box button {
+  padding: 15px 0;
+  width: 25%;
+  background-color:cornflowerblue;
+  border: none;
+  outline: none;
+  color: white;
+  border-radius: 5px;
+}
