--- a/styles/style.css
+++ b/styles/style.css
@@ -68,3 +68,13 @@ body{
   margin: 5px 0 20px 0;
   font-size: 14px;
 }
+.word-meaning {
+  color: #575a75;
+}
+.word-example {
+  color: #575a75;
+  font-style: italic;
+  border-left: 5px solid cornflowerblue;
+  padding-left: 20px;
+  margin-top: 30px;
+}
